1. Fixed various spacing and other issues with display of posts. 2. Fixed bug with hiding text containing multibyte characters. 3. Fixed display of content in announcements and rules and cured some inconsistencies between the two. 4. Fixed error in markup for display of rules in register.php. 5. Fixed spacing issue in postleft.

--- a/upload/style/Oxygen.css
+++ b/upload/style/Oxygen.css
@@ -41,14 +41,31 @@
 
 DIV.postmsg P {LINE-HEIGHT: 1.4}
 DIV.postleft DT {FONT-SIZE: 1.1em}
-.pun PRE {FONT-SIZE: 1.2em}
+.pun PRE, .pun CODE {FONT-SIZE: 1.2em}
+.pun PRE CODE {FONT-SIZE: 1em;}
+
 
 /* 2.5 Bold text */
 
-DIV.postleft DT, DIV.postmsg H4, #helpfile H5, DIV.postmsg H5, TD.tcl H3, DIV.forminfo H3, P.postlink, DIV.linkst LI, .pun .quotebox cite,
+DIV.postleft DT, #helpfile H5, TD.tcl H3, DIV.forminfo H3, P.postlink, DIV.linkst LI,
 DIV.linksb LI, DIV.postlinksb LI, .blockmenu LI, #brdtitle H1, .pun SPAN.warntext, .pun P.warntext {FONT-WEIGHT: bold}
 
-.pun .quotebox cite {font-style: normal;}
+/* 2.6 Post Content, Announcements, Rules */
+
+DIV.usercontent P, DIV.postmsg P {padding: 0.75em 0}
+DIV.usercontent UL, DIV.postmsg UL {PADDING: 0.75em 1em 0.75em 2.5em; LIST-STYLE: disc}
+DIV.usercontent OL, DIV.postmsg OL {PADDING: 0.75em 1em 0.75em 2.5em; LIST-STYLE: decimal}
+DIV.usercontent OL.alpha, DIV.postmsg OL.alpha {LIST-STYLE: lower-alpha}
+DIV.usercontent LI OL, DIV.usercontent LI UL, DIV.postmsg LI OL, DIV.postmsg LI UL {PADDING: 0 1em 0.75em 2em}
+DIV.usercontent LI P, DIV.postmsg LI P {PADDING: 0}
+DIV.usercontent h1 {font-size: 1.4em; font-weight: bold; padding: 0.75em 0 0 0}
+DIV.usercontent h2 {font-size: 1.2em; font-weight: bold; padding: 0.75em 0 0 0}
+DIV.usercontent h3 {font-size: 1.1em; font-weight: bold; padding: 0.75em 0 0 0}
+DIV.usercontent h4, DIV.usercontent h5, DIV.usercontent h6 {FONT-SIZE: 1em; FONT-WEIGHT: bold; PADDING: 0.75em 0 0 0}
+DIV.quotebox cite {FONT-WEIGHT: bold; FONT-STYLE: normal; padding: 0.75em 0.75em 0 0.75em}
+DIV.postmsg SPAN.bbu {TEXT-DECORATION: underline}
+.pun DIV.postmsg h5 {FONT-SIZE: 1.1em; FONT-WEIGHT: bold; padding: 0.75em 0 0 0;}
+
 
 /****************************************************************/
 /* 3. LINKS */
@@ -159,12 +176,13 @@ DIV.linksb, DIV.postlinksb {PADDING: 3px 6px 8px 6px}
 
 /* 8.1 Padding around left and right columns in viewtopic */
 
-DIV.postleft DL, DIV.postright {PADDING: 6px}
+DIV.postleft DL {PADDING: 0.75em 6px}
+DIV.postright {PADDING: 0 6px}
 
 /* 8.2 Extra spacing for poster contact details and avatar */
 
-DD.usercontacts, DD.postavatar {MARGIN-TOP: 5px}
-DD.postavatar {MARGIN-BOTTOM: 5px}
+DD.usercontacts {MARGIN-TOP: 5px}
+DD.postavatar, DD.usertitle {MARGIN-BOTTOM: 5px}
 
 /* 8.3 Extra top spacing for signatures and edited by */
 
@@ -172,10 +190,9 @@ DIV.postsignature, DIV.postmsg P.postedit {PADDING-TOP: 15px}
 
 /* 8.4 Spacing for code and quote boxes */
 
-DIV.postmsg H4 {MARGIN-BOTTOM: 10px}
-
-.pun .quotebox, .pun .codebox {margin: 0.75em 1em; padding: 1em 0.75em; }
-.pun .quotebox cite {display: block; padding-bottom: 0.5em}
+.pun .quotebox CITE {DISPLAY: block; PADDING: 0.75em 0 0 0;}
+.pun .quotebox {margin: 0.75em 1em; padding: 0 0.75em;}
+.pun .codebox {margin: 0.75em 1em; padding: 0 }
 
 /* 8.5 Padding for the action links and online indicator in viewtopic */
 
@@ -193,9 +210,6 @@ P.multidelete {
 	PADDING-BOTTOM: 5px
 }
 
-/* 8.7 Make sure paragraphs in posts don't get any padding */
-
-DIV.postmsg P {PADDING: 0}
 
 /****************************************************************/
 /* 9. SPECIAL SPACING FOR FORMS */
